test/errors/expecting_line_ending.dm
a be 5 + 7 false

--- Output
Unexpected character

1| a be 5 + 7 false
               ^

---
